Use the right default profile for the current channel depth

defaultProfileForColorSpace needs a colorSpaceId including
the channelDepthId, not just the colorModelId.

BUG:408485
BACKPORT:krita/4.2